--- a/vue/guestbook/package.json
+++ b/vue/guestbook/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "less": "^4.1.3",
     "vue": "^3.2.41"
   },
   "devDependencies": {
