--- a/ListSampleAndroid/app/build.gradle
+++ b/ListSampleAndroid/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 //    implementation "androidx.compose.runtime:runtime-livedata:1.3.0-rc01"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha01"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
